tests/paczka1/fuzzy1/92327437.err
Error in line 1: e6I1Q8uv A287 88,1
Error in line 8: 1HGNqs9DOsX A287 35,6
Error in line 12: Klb2dmb S251 44,9
Error in line 16: 1HGNqs9DOsX S762 74,4
Error in line 26: g3l9qvvn A124 21,4
Error in line 28: g3l9qvvn A287 45,3
Error in line 24: e6I1Q8uv A287 85,8
Error in line 31: e6I1Q8uv S251 11,7
Error in line 20: Os9VyHQ2Sq S251 9,6
Error in line 32: Klb2dmb A124 96,4
